--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="#contact">Contact</a>
       </nav>
       <div class="content-wrap">
-        <img class="profile-img col-narrow" src="images/head.jpg" alt="Zainab Melhem">
+        <img class="profile-img col-narrow" src="images/ph.jpg" alt="Zainab Melhem">
       <div class="col-wide">
         <h1>Zainab Melhem</h1>
         <h2>Full Stack Developer</h2>
