--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
          <blockquote><p>"All men dream, but not equally. Those who dream by night in the dusty recesses of their minds, 
             wake in the day to find that it was vanity: but the dreamers of the day are dangerous men, 
             for they may act on their dreams with open eyes, to make them possible."
-            T. E. Lawrence</p></blockquote>
-        <br>
+           
+            ~T. E. Lawrence</p></blockquote>
+        
         <p>Currently a Computer Science student at Texas State University in San Marcos, Texas. 
            I'm proficient in several high level languages and have gained various skills through my studies.
            My interests lie in artificial intelligence, virtual reality, machine learning, and cyber security.
