--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
       <div class="content-wrap">
         <img class="profile-img col-narrow" src="images/head.JPG" alt="Zainab Melhem">
       <div class="col-wide">
-        <h1>Zainab Melhem</h1>
+        <h1>     Zainab Melhem</h1>
          <blockquote><p>"All men dream, but not equally. Those who dream by night in the dusty recesses of their minds, 
             wake in the day to find that it was vanity: but the dreamers of the day are dangerous men, 
             for they may act on their dreams with open eyes, to make them possible."
            
-            ~T. E. Lawrence</p></blockquote>
+            T. E. Lawrence</p></blockquote>
         
         <p>Currently a Computer Science student at Texas State University in San Marcos, Texas. 
            I'm proficient in several high level languages and have gained various skills through my studies.
@@ -49,7 +49,7 @@
 
             <!-- School details: copy this whole block to add more schools. -->
             <div class="col-narrow">
-            <h3>Texas State University, 2016-2018</h3>
+            <h3>Texas State University,2016-2018</h3>
             <p>Bachelor of Science in Computer Science</p>
             <h3>Freecodecamp 2018 </h3>
             <p>Full Stack Developer Certification </p>
@@ -130,13 +130,13 @@
         <div class="contact">
             <a href="mailto:zainabmelh@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i>
             <span class="sr-only">Email</span></a>
-          <!--  <a href="http://yourwebsite.com" target="_blank"><i class="fa fa-star-o" aria-hidden="true"></i>
-            <span class="sr-only">MySite</span></a> -->
-            <a href="#" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i>
+            <a href="https://github.com/zainabmelh"><i class="fa fa-github" aria-hidden="true"></i>
+            <span class="sr-only"><GitHub</span></a>
+            <a href="https://twitter.com/xainba"><i class="fa fa-twitter" aria-hidden="true"></i>
             <span class="sr-only">Twitter</span></a>
-            <a href="https://www.linkedin.com/in/zainab-melhem-7b5a94145/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i>
+            <a href="https://www.linkedin.com/in/zainab-melhem-7b5a94145/"><i class="fa fa-linkedin" aria-hidden="true"></i>
             <span class="sr-only">LinkedIn</span></a>
-            <a href="https://www.facebook.com/profile.php?id=1062251727" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i>
+            <a href="https://www.facebook.com/profile.php?id=1062251727"><i class="fa fa-facebook" aria-hidden="true"></i>
             <span class="sr-only">Facebook</span></a>
         </div>
 
