--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="content-wrap">
         <img class="profile-img col-narrow" src="images/head.JPG" alt="Zainab Melhem">
       <div class="col-wide">
-        <h1>     Zainab Melhem</h1>
+        <p style="font-size:30px">Zainab Melhem</p>
          <blockquote><p>"All men dream, but not equally. Those who dream by night in the dusty recesses of their minds, 
             wake in the day to find that it was vanity: but the dreamers of the day are dangerous men, 
             for they may act on their dreams with open eyes, to make them possible."
