--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="content-wrap">
         <img class="profile-img col-narrow" src="images/head.JPG" alt="Zainab Melhem">
       <div class="col-wide">
-        <p style="font-size:30px">Zainab Melhem</p>
+        <h1>Zainab Melhem</h1>
          <blockquote><p>"All men dream, but not equally. Those who dream by night in the dusty recesses of their minds, 
             wake in the day to find that it was vanity: but the dreamers of the day are dangerous men, 
             for they may act on their dreams with open eyes, to make them possible."
@@ -49,7 +49,7 @@
 
             <!-- School details: copy this whole block to add more schools. -->
             <div class="col-narrow">
-            <h3>Texas State University,2016-2018</h3>
+            <h3>Texas State University, 2016-2018</h3>
             <p>Bachelor of Science in Computer Science</p>
             <h3>Freecodecamp 2018 </h3>
             <p>Full Stack Developer Certification </p>
@@ -128,7 +128,7 @@
 
         <!-- Social media and contact links. Add or remove any networks. -->
         <div class="contact">
-            <a href="mailto:zainabmelh@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i>
+            <a href="mailto:zainabmelh@gmail.com"><i class="fa fa-envelope-o"></i>
             <span class="sr-only">Email</span></a>
             <a href="https://github.com/zainabmelh"><i class="fa fa-github" aria-hidden="true"></i>
             <span class="sr-only"><GitHub</span></a>
