--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
         <!-- Social media and contact links. Add or remove any networks. -->
         <div class="contact">
-            <a href="mailto:zainabmelh@gmail.com"><i class="fa fa-envelope-o"></i>
+            <a href="mailto:zainabmelh@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i>
             <span class="sr-only">Email</span></a>
             <a href="https://github.com/zainabmelh"><i class="fa fa-github" aria-hidden="true"></i>
             <span class="sr-only"><GitHub</span></a>
