--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   </style>
 
   <div class="gallery">
-    <a target="https://codepen.io/zainabmelh/pen/WOddOX" <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/George_Orwell_press_photo.jpg/566px-George_Orwell_press_photo.jpg">
+    <a href="https://codepen.io/zainabmelh/pen/WOddOX"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/George_Orwell_press_photo.jpg/566px-George_Orwell_press_photo.jpg" alt= "George Orwell"></a> 
       <img src="images/ph3.jpg" class = "hover" alt="Fjords" width="300" height="200">
     </a>
     <div class="desc">Tribute Page</div>
