--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
   </style>
 
   <div class="gallery">
-    <a href="https://codepen.io/zainabmelh/pen/WOddOX"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/George_Orwell_press_photo.jpg/566px-George_Orwell_press_photo.jpg" alt= "George Orwell"></a> 
-      <img src="images/ph3.jpg" class = "hover" alt="Fjords" width="300" height="200">
+    <a href="https://codepen.io/zainabmelh/pen/WOddOX">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/George_Orwell_press_photo.jpg/566px-George_Orwell_press_photo.jpg" alt= "George Orwell" width="300" height="200">
     </a>
     <div class="desc">Tribute Page</div>
   </div>
